--- a/initramfs_cm7/init.rc
+++ b/initramfs_cm7/init.rc
@@ -564,6 +564,9 @@ on boot
 # Include extra init file
     import /system/etc/init.local.rc
 
+    write /sys/devices/platform/s3c-keypad/column_delay 5
+    write /sys/devices/platform/s3c-keypad/timer_delay  5
+
     class_start default
 
 ## Daemon processes to be run by init.
@@ -756,6 +759,10 @@ service orientationd /system/bin/orientationd
 service geomagneticd /system/bin/geomagneticd
     user compass
     group system input
+
+service tvout /system/bin/tvoutserver
+    user system
+    group graphics
     
 service gps-daemon /system/vendor/bin/gpsd
 	user system
