--- a/Kernel/drivers/tfsr/Kconfig
+++ b/Kernel/drivers/tfsr/Kconfig
@@ -3,7 +3,10 @@
 #
 
 menu "TinyFSR Support for cramfs"
-
+config USE_BML
+	default n
+	help
+	  eXtended Sector Remapper device
 config TINY_FSR
 	bool "Using TinyFSR for Cramfs"
 	default y
