--- a/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -1836,9 +1836,9 @@ CONFIG_ONEDRAM_TX_RETRY=10
 #
 # LinuStoreIII Flash Devices (FSR)
 #
-# CONFIG_RFS_FSR=m
-# CONFIG_RFS_FSR_STL=m
-# CONFIG_RFS_STL_DELETE=y
+CONFIG_RFS_FSR=n
+CONFIG_RFS_FSR_STL=n
+CONFIG_RFS_STL_DELETE=n
 # CONFIG_RFS_FSR_STL_BENCHMARK is not set
 # CONFIG_FSR_DUAL_VOLUME is not set
 # CONFIG_FSR_FLASH_PHYS_ADDR=0xB0000000
@@ -1848,7 +1848,7 @@ CONFIG_ONEDRAM_TX_RETRY=10
 #
 # TinyFSR Support for cramfs
 #
-# CONFIG_TINY_FSR=y
+CONFIG_TINY_FSR=n
 # CONFIG_TINY_FLASH_PHYS_ADDR=0xB0000000
 # CONFIG_LINUSTOREIII_TINY_DEBUG_VERBOSE=0
 
@@ -1944,7 +1944,7 @@ CONFIG_YAFFS_XATTR=y
 #
 # RFS Filesystem
 #
-# CONFIG_RFS_FS=m
+CONFIG_RFS_FS=n
 # CONFIG_RFS_DEFAULT_IOCHARSET="utf8"
 # CONFIG_RFS_FS_PERMISSION=y
 # CONFIG_RFS_FS_XATTR is not set
