--- a/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -859,6 +859,7 @@ CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_SYS_HYPERVISOR is not set
 # CONFIG_CONNECTOR is not set
 CONFIG_MTD=y
+CONFIG_MTD_BLOCK=y
 # CONFIG_MTD_DEBUG is not set
 # CONFIG_MTD_TESTS is not set
 CONFIG_MTD_CONCAT=y
