--- a/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -885,7 +885,7 @@ CONFIG_BLK_DEV_LOOP=y
 CONFIG_MTD_ONENAND=y
 # CONFIG_MTD_ONENAND_VERIFY_WRITE is not set
 # CONFIG_MTD_ONENAND_GENERIC is not set
-CONFIG_MTD_ONENAND_SAMSUNG=y
+# CONFIG_MTD_ONENAND_SAMSUNG=y
 CONFIG_MTD_ONENAND_SAMSUNG_AUDI=y
 CONFIG_MTD_ONENAND_OTP=y
 CONFIG_MTD_ONENAND_2X_PROGRAM=y
