Revert "add debug options"
This reverts commit f9cab142e0dc93070618cc7c679b142fb669952e.

--- a/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -860,8 +860,7 @@ CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_CONNECTOR is not set
 CONFIG_MTD=y
 CONFIG_MTD_BLOCK=y
-CONFIG_MTD_DEBUG=y 
-CONFIG_MTD_DEBUG_VERBOSE=3 
+# CONFIG_MTD_DEBUG is not set
 # CONFIG_MTD_TESTS is not set
 CONFIG_MTD_CONCAT=y
 CONFIG_MTD_PARTITIONS=y
