--- a/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -888,7 +888,7 @@ CONFIG_MTD_ONENAND=y
 # CONFIG_MTD_ONENAND_SAMSUNG=y
 CONFIG_MTD_ONENAND_SAMSUNG_AUDI=y
 # CONFIG_MTD_ONENAND_OTP=y
-CONFIG_MTD_ONENAND_2X_PROGRAM=y
+# CONFIG_MTD_ONENAND_2X_PROGRAM=y
 # CONFIG_MTD_ONENAND_SIM is not set
 
 
