add another option

--- a/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -860,6 +860,7 @@ CONFIG_EXTRA_FIRMWARE=""
 # CONFIG_CONNECTOR is not set
 CONFIG_MTD=y
 CONFIG_MTD_BLOCK=y
+CONFIG_MTD_BLKDEVS=y
 CONFIG_MTD_CHAR=y
 # CONFIG_MTD_DEBUG is not set
 # CONFIG_MTD_TESTS is not set
