--- a/Kernel/drivers/video/Kconfig
+++ b/Kernel/drivers/video/Kconfig
@@ -251,9 +251,9 @@ if !S5PV210_GARNETT_DELTA
 	source  "drivers/video/samsung/Kconfig"
 endif
 
-if S5PV210_GARNETT_DELTA
-	source "drivers/video/samsung_mipi/Kconfig"
-endif
+#if S5PV210_GARNETT_DELTA
+#	source "drivers/video/samsung_mipi/Kconfig"
+#endif
 
 config FB_CIRRUS
 	tristate "Cirrus Logic support"
