--- a/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.7
-# Wed Dec 14 05:35:43 2011
+# Tue Jan  3 03:07:11 2012
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -1034,7 +1034,7 @@ CONFIG_CHR_DEV_SG=y
 # CONFIG_SCSI_CONSTANTS is not set
 # CONFIG_SCSI_LOGGING is not set
 # CONFIG_SCSI_SCAN_ASYNC is not set
-CONFIG_SCSI_WAIT_SCAN=n
+CONFIG_SCSI_WAIT_SCAN=m
 
 #
 # SCSI Transports
@@ -1075,14 +1075,11 @@ CONFIG_IFB=y
 CONFIG_NETDEV_1000=y
 CONFIG_NETDEV_10000=y
 CONFIG_WLAN=y
-CONFIG_WIMAX_VICTORY=n
-CONFIG_WIMAX_GPIO_VICTORY=n
-CONFIG_BROADCOM_WIFI=m
-CONFIG_BROADCOM_WIFI_VICTORY=y
+CONFIG_WIMAX_VICTORY=m
+CONFIG_WIMAX_GPIO_VICTORY=m
 CONFIG_BCM4329=m
-# CONFIG_BROADCOM_WIFI_ATLAS is not set
-CONFIG_BROADCOM_WIFI_RESERVED_MEM=y
-CONFIG_WLAN_SAMSUNG_MEMSIZE_BCM=256
+CONFIG_BCM4329_FW_PATH="/system/etc/firmware/fw_bcm4329.bin"
+CONFIG_BCM4329_NVRAM_PATH="/proc/calibration"
 # CONFIG_HOSTAP is not set
 
 #
@@ -2169,7 +2166,6 @@ CONFIG_CRYPTO=y
 #
 # Crypto core or helper
 #
-# CONFIG_CRYPTO_FIPS is not set
 CONFIG_CRYPTO_ALGAPI=y
 CONFIG_CRYPTO_ALGAPI2=y
 CONFIG_CRYPTO_AEAD=y
@@ -2178,7 +2174,6 @@ CONFIG_CRYPTO_BLKCIPHER=y
 CONFIG_CRYPTO_BLKCIPHER2=y
 CONFIG_CRYPTO_HASH=y
 CONFIG_CRYPTO_HASH2=y
-CONFIG_CRYPTO_RNG=m
 CONFIG_CRYPTO_RNG2=y
 CONFIG_CRYPTO_PCOMP=y
 CONFIG_CRYPTO_MANAGER=y
@@ -2264,7 +2259,7 @@ CONFIG_CRYPTO_DEFLATE=y
 #
 # Random Number Generation
 #
-CONFIG_CRYPTO_ANSI_CPRNG=n
+# CONFIG_CRYPTO_ANSI_CPRNG is not set
 CONFIG_CRYPTO_HW=y
 # CONFIG_BINARY_PRINTF is not set
 
