Add POKE_REC_BOOT_MAGIC Kconfig option.

--- a/Kernel/arch/arm/mach-s5pv210/Kconfig
+++ b/Kernel/arch/arm/mach-s5pv210/Kconfig
@@ -326,4 +326,10 @@ config CPU_DIDLE
 	depends on CPU_IDLE
 	default y
 
+config POKE_REC_BOOT_MAGIC
+	bool "Flag stage1 init to boot recovery on reboot(..., \"recovery\")"
+	help
+	  Poke REC_BOOT_MAGIC into REC_BOOT_ADDR on reboot(..., "recovery") to flag
+	  stage1 init to load the recovery image.
+
 endif
