--- a/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
+++ b/Kernel/arch/arm/configs/cyanogenmod_epicmtd_defconfig
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.7
-# Tue Jan  3 03:07:11 2012
+# Mon Jan 16 14:16:31 2012
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -810,8 +810,10 @@ CONFIG_BT_L2CAP=y
 CONFIG_BT_SCO=y
 CONFIG_BT_RFCOMM=y
 CONFIG_BT_RFCOMM_TTY=y
-# CONFIG_BT_BNEP is not set
-# CONFIG_BT_HIDP is not set
+CONFIG_BT_BNEP=y
+# CONFIG_BT_BNEP_MC_FILTER is not set
+# CONFIG_BT_BNEP_PROTO_FILTER is not set
+CONFIG_BT_HIDP=y
 
 #
 # Bluetooth device drivers
@@ -819,8 +821,8 @@ CONFIG_BT_RFCOMM_TTY=y
 # CONFIG_BT_HCIBTSDIO is not set
 CONFIG_BT_HCIUART=y
 CONFIG_BT_HCIUART_H4=y
-# CONFIG_BT_HCIUART_BCSP is not set
-# CONFIG_BT_HCIUART_LL is not set
+CONFIG_BT_HCIUART_BCSP=y
+CONFIG_BT_HCIUART_LL=y
 # CONFIG_BT_HCIVHCI is not set
 # CONFIG_BT_MRVL is not set
 # CONFIG_AF_RXRPC is not set
@@ -1533,7 +1535,9 @@ CONFIG_FB_S3C_LCD_INIT=y
 # CONFIG_FB_S3C_DEBUG is not set
 # CONFIG_FB_S3C_TRACE_UNDERRUN is not set
 CONFIG_FB_S3C_DEFAULT_WINDOW=2
-CONFIG_FB_S3C_NR_BUFFERS=2
+CONFIG_FB_S3C_NR_BUFFERS=7
+CONFIG_FB_S3C_NUM_OVLY_WIN=1
+CONFIG_FB_S3C_NUM_BUF_OVLY_WIN=3
 # CONFIG_FB_S3C_VIRTUAL is not set
 # CONFIG_FB_S3C_LTE480WV is not set
 # CONFIG_FB_S3C_HT101HD1 is not set
@@ -1625,6 +1629,7 @@ CONFIG_SND_SOC_WM8994_VICTORY=y
 # CONFIG_SOUND_PRIME is not set
 # CONFIG_SND_S5P_RP is not set
 # CONFIG_HID_SUPPORT is not set
+CONFIG_HID=y
 CONFIG_USB_SUPPORT=y
 CONFIG_USB_ARCH_HAS_HCD=y
 # CONFIG_USB_ARCH_HAS_OHCI is not set
