make-kexec-cwm-test-zip.sh: Create CWM kexec bootable .zip from locally built zImage, enables rapid and safe kernel testing.
Change-Id: Ia843d437764bc0d7d7c5eec545a1007dee9711a8

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 *.o
 *.o.d
 *.order
+tools/kexec-cwm-test-zip/META-INF/com/google/android/update-binary
+tools/kexec-cwm-test-zip/zImage
+boot_zImage.zip
 Kernel/.config
 Kernel/.config.old
 Kernel/.missing-syscalls.d
